Arreglando las cagadas de Pablo